# cosmogrb

./: .coverageac  .gitattributes  .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  codecov.yaml  codecov.yml  setup.cfg  setup.py
.github/workflows/: build_test.yml  docs.yml
cosmogrb/: __init__.py  __version__.py  _version.py  config.py  gbm_grb.py  lightcurve.py  response.py
cosmogrb/data/: SynthGRB_0_store.h5.REMOVED.git-id  SynthGRB_1_store.h5.REMOVED.git-id  SynthGRB_2_store.h5.REMOVED.git-id  SynthGRB_3_store.h5.REMOVED.git-id  SynthGRB_4_store.h5.REMOVED.git-id  cosmogrb_config.yml  grb.h5.REMOVED.git-id  posthist.h5  subphoto.h5  test_grb.h5.REMOVED.git-id  test_grb_pop.h5  universe.h5  weak_grb.h5.REMOVED.git-id
cosmogrb/grb/: __init__.py  gbm_grb.py  grb.py  grb_detector.py
cosmogrb/io/: __init__.py  detector_save.py  gbm_fits.py  grb_save.py  read_universe.py
cosmogrb/lightcurve/: .#lightcurve.py  __init__.py  background.py  cpl_source.py  fits_file.py  gbm_lightcurve.py  light_curve_storage.py  lightcurve.py  lightcurve_analyzer.py  sampler.py  source.py  tte.py
cosmogrb/response/: __init__.py  gbm_response.py  response.py
cosmogrb/sampler/: __init__.py  background.py  constant_cpl.py  cpl_constant_functions.py  cpl_functions.py  cpl_source.py  sampler.py  sampler_prototype.py  source.py  source_function.py  subphoto.py  subphoto_functions.py  temporal_functions.py
cosmogrb/scripts/: gen_test_data.py  gen_test_uni.py
cosmogrb/test/: conftest.py  test_basic.py  test_gbm_background.py  test_gbm_trigger.py  test_grb.py  test_lightcurve.py  test_time_interval.py  test_universe.py
cosmogrb/universe/: gbm_universe.py  survey.py  universe.py  universe_info.py
cosmogrb/utils/: __init__.py  array_to_cmap.py  file_utils.py  fits_file.py  hdf5_utils.py  interpolation.py  logging.py  meta.py  numba_array.py  package_utils.py  response_file.py  sys_tools.py  (+2 more)
docs/: conf.py  index.rst  requirements.txt
(+64 files in other folders)
